--- a/Bubble-Light-Blue/gtk-3.0/gtk.css
+++ b/Bubble-Light-Blue/gtk-3.0/gtk.css
@@ -4724,7 +4724,8 @@ filechooser headerbar widget stack box.path-bar-box,
     border-top: 2px solid #557FAF;
     border-bottom: 2px solid transparent;
     color: #282E34;
-    margin: 0px; }
+    margin: 0px;
+    padding: 0 1px; }
     filechooser headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child label, filechooser headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child image,
     .nautilus-window headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child label,
     .nautilus-window headerbar widget stack box.path-bar-box .nautilus-path-bar button.image-button:last-child image {
